--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-dom": "^16.0.11",
     "apollo-boost": "^0.4.9",
     "apollo-server-lambda": "^2.13.1",
-    "axios": "^0.19.2",
     "graphql": "^15.0.0",
     "node-fetch": "^2.3.0",
     "react": "^16.8.0-alpha.0",
@@ -25,6 +24,8 @@
     "start": "run-p start:**",
     "start:app": "react-scripts start",
     "start:lambda": "env-cmd -f .env netlify-lambda serve src/lambda --config webpack.functions.js",
+    "dev": "run-p start:app dev:lambda",
+    "dev:lambda": "nodemon",
     "build": "run-p build:**",
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda --config webpack.functions.js",
