--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@types/jest": "^23.3.10",
     "@types/node": "^14.0.11",
     "@types/node-fetch": "^2.5.7",
-    "@types/react": "^16.7.13",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
     "apollo-boost": "^0.4.9",
     "apollo-server-lambda": "^2.13.1",
+    "emotion-theming": "^10.0.27",
     "graphql": "^15.0.0",
     "node-fetch": "^2.3.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "3.4.1",
     "typescript": "^3.9.2",
     "xml2js": "^0.4.23"
   },
@@ -42,16 +46,17 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/aws-lambda": "^8.10.15",
+    "@babel/plugin-transform-object-assign": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@types/aws-lambda": "^8.10.55",
     "@types/react-router-dom": "^5.1.5",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.1.0",
     "env-cmd": "^10.1.0",
-    "http-proxy-middleware": "^0.19.0",
-    "netlify-lambda": "^1.1.0",
+    "http-proxy-middleware": "^1.0.4",
+    "netlify-lambda": "^1.6.3",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "webpack-node-externals": "^1.7.2"
   }
 }
