--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodbuddy",
+  "name": "betterreads",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,55 +7,54 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^14.0.11",
-    "@types/node-fetch": "^2.5.7",
-    "@types/react": "^16.9.36",
-    "@types/react-dom": "^16.9.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.9",
-    "apollo-server-lambda": "^2.13.1",
+    "apollo-server-lambda": "^2.14.4",
     "emotion-theming": "^10.0.27",
-    "graphql": "^15.0.0",
-    "node-fetch": "^2.3.0",
+    "graphql": "^15.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.9.2",
-    "xml2js": "^0.4.23"
+    "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "run-p start:**",
-    "start:app": "react-scripts start",
-    "start:lambda": "env-cmd -f .env netlify-lambda serve src/lambda --config webpack.functions.js",
-    "dev": "run-p start:app dev:lambda",
-    "dev:lambda": "nodemon",
-    "build": "run-p build:**",
-    "build:app": "react-scripts build",
-    "build:lambda": "netlify-lambda build src/lambda --config webpack.functions.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:lambda": "netlify-lambda build src/lambda --config webpack.functions.js",
+    "dev": "netlify dev"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "@babel/plugin-transform-object-assign": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@types/aws-lambda": "^8.10.55",
     "@types/react-router-dom": "^5.1.5",
     "babel-loader": "^8.1.0",
-    "env-cmd": "^10.1.0",
-    "http-proxy-middleware": "^1.0.4",
     "netlify-lambda": "^1.6.3",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "webpack-node-externals": "^1.7.2"
   }
