--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-server-lambda": "^2.14.4",
     "emotion-theming": "^10.0.27",
     "graphql": "^15.1.0",
+    "oauth": "^0.9.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -52,6 +53,7 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@types/aws-lambda": "^8.10.55",
+    "@types/oauth": "^0.9.1",
     "@types/react-router-dom": "^5.1.5",
     "babel-loader": "^8.1.0",
     "netlify-lambda": "^1.6.3",
