--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/react": "^16.9.0",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.0.11",
+    "@types/jest": "^26.0.5",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.9",
-    "apollo-server-lambda": "^2.14.4",
+    "apollo-server-lambda": "^2.16.0",
     "emotion-theming": "^10.0.27",
-    "graphql": "^15.1.0",
+    "graphql": "^15.3.0",
     "oauth": "^0.9.15",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,16 +49,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-object-assign": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/aws-lambda": "^8.10.55",
-    "@types/node": "^14.0.13",
+    "@babel/plugin-transform-object-assign": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/aws-lambda": "^8.10.59",
+    "@types/node": "^14.0.24",
     "@types/oauth": "^0.9.1",
     "@types/react-router-dom": "^5.1.5",
     "babel-loader": "^8.1.0",
-    "netlify-lambda": "^1.6.3",
+    "netlify-lambda": "1.6.3",
     "prettier": "^2.0.5",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^2.5.0"
   }
 }
